--- a/index.html
+++ b/index.html
@@ -11,7 +11,19 @@
 
 	<body>
 	
-		<p>My First Page</p>
+		<form method="POST" onsubmit="return calculatorBMI()">
+
+            Put your weight her: <br/>
+            <input type="text" name="weight" id="weight" placeholder="Example: 65"/> <br/><br/>
+
+            Put your height her: <br/>
+            <input type="text" name="height" id="height" placeholder="Example: 1.8"/> <br/><br/>
+
+            <input type="submit" value="BMI Calculator">
+
+        </form>
+
+        <div id="result"></div>
 
 	</body>
 
